--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -21,7 +21,6 @@
                 app:popEnterAnim="@anim/slide_in_left"
                 app:popExitAnim="@anim/slide_out_right"
         />
-        <action android:id="@+id/action_menuFragment_to_tabHome" app:destination="@id/tabHome"/>
     </fragment>
 
     <fragment android:id="@+id/tuteurDetailFragment"
@@ -38,14 +37,13 @@
                 app:exitAnim="@anim/slide_out_left"
                 app:popEnterAnim="@anim/slide_in_left"
                 app:popExitAnim="@anim/slide_out_right"/>
-        <action android:id="@+id/action_tuteurDetailFragment_to_tabHome" app:destination="@id/tabHome"/>
     </fragment>
 
     <fragment android:id="@+id/tuteurEditFragment"
-              android:name="be.marche.mercredi.tuteur.fragments.TuteurEditCoordonneesFragment"
+              android:name="be.marche.mercredi.tuteur.fragments.TuteurEditFragment"
               android:label="TuteurEditFragment">
         <action android:id="@+id/action_tuteurEditFragment_pop"
-                app:popUpTo="@id/tuteurEditFragment"
+                app:popUpTo="@+id/tuteurEditFragment"
                 app:popUpToInclusive="true"
                 app:enterAnim="@anim/slide_in_right"
                 app:exitAnim="@anim/slide_out_left"
@@ -87,6 +85,4 @@
                 app:popExitAnim="@anim/slide_out_right"
         />
     </fragment>
-    <fragment android:id="@+id/tabHome" android:name="be.marche.mercredi.tuteur.fragments.TabEditFragment"
-              android:label="TabHome"/>
 </navigation>
