--- a/app/src/main/res/layout/fragment_enfant_edit.xml
+++ b/app/src/main/res/layout/fragment_enfant_edit.xml
@@ -40,6 +40,15 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
+    <TextView
+            android:text="@string/FormTitreSexe"
+            android:layout_width="180dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/titleSexe"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/enfantLabelNom"
+            android:layout_marginStart="8dp"/>
+
     <Spinner
             android:layout_width="150dp"
             android:layout_height="wrap_content"
@@ -102,15 +111,17 @@
             android:id="@+id/spinnerEcoleView"
             app:layout_constraintTop_toBottomOf="@+id/titleEcole"
             app:layout_constraintStart_toEndOf="@+id/spinnerAnneeScolaireView"
-            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintEnd_toEndOf="parent"
     />
 
     <Spinner
             android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:id="@+id/spinnerAnneeScolaireView"
-            app:layout_constraintTop_toBottomOf="@+id/titleEcole" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/spinnerEcoleView"/>
-
+            app:layout_constraintTop_toBottomOf="@+id/titleEcole"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintEnd_toStartOf="@+id/spinnerEcoleView"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
