--- a/app/src/main/res/layout/fragment_enfant_detail.xml
+++ b/app/src/main/res/layout/fragment_enfant_detail.xml
@@ -77,14 +77,24 @@
 
     <TextView
             android:id="@+id/enfantRemarques"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@+id/enfantAnneeScolaire"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:scrollbars="vertical"
             tools:text="@tools:sample/lorem/random"
-            android:layout_marginTop="8dp"/>
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+    />
+
+    <Button
+            android:text="@string/btnAddPresence"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnAddPresence"
+            app:layout_constraintTop_toBottomOf="@+id/enfantRemarques"
+            android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
