--- a/app/src/main/res/layout/item_jour.xml
+++ b/app/src/main/res/layout/item_jour.xml
@@ -19,7 +19,7 @@
                 android:layout_height="match_parent">
 
             <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/jourDateView"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body1"
@@ -31,7 +31,7 @@
                     android:layout_marginStart="8dp"/>
 
             <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/typeJourView"
                     tools:text="Plaine de noel"
