--- a/app/src/main/res/layout/item_jour.xml
+++ b/app/src/main/res/layout/item_jour.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:card_view="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
+              xmlns:card_view="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="70dp">
@@ -22,9 +23,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/jourDateView"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                     tools:text="Mercredi 12 janvier 2018"
-                    android:textStyle="bold"
                     android:layout_marginTop="8dp"
                     card_view:layout_constraintTop_toTopOf="parent"
                     card_view:layout_constraintStart_toStartOf="parent"
