--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -94,4 +94,8 @@
         <action android:id="@+id/action_presenceFragment_pop" app:popUpTo="@id/presenceFragment"
                 app:popUpToInclusive="true"/>
     </fragment>
+    <fragment android:id="@+id/loginFragment" android:name="be.marche.mercredi.user.LoginFragment"
+              android:label="LoginFragment">
+        <action android:id="@+id/action_loginFragment_to_menuFragment" app:destination="@id/menuFragment"/>
+    </fragment>
 </navigation>
