first update api

--- a/app/src/main/res/layout/activity_tabbed.xml
+++ b/app/src/main/res/layout/activity_tabbed.xml
@@ -17,9 +17,9 @@
     </com.google.android.material.tabs.TabLayout>
 
     <androidx.viewpager.widget.ViewPager
-            android:id="@+id/mypager"
+            android:id="@+id/tuteurViewPager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".tabbedActivity"/>
+    />
 
 </LinearLayout>
