--- a/app/src/main/res/layout/conjoint_edit_coordonnees_fragment.xml
+++ b/app/src/main/res/layout/conjoint_edit_coordonnees_fragment.xml
@@ -17,7 +17,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/form_hint_nom"
-                android:id="@+id/conjointNom"/>
+                android:id="@+id/conjointNom" android:inputType="textPersonName"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -49,7 +49,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/form_hint_email"
-                android:id="@+id/conjointEmail"/>
+                android:id="@+id/conjointEmail" android:inputType="textEmailAddress"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -65,7 +65,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/form_hint_telephone"
-                android:id="@+id/conjointTelephone"/>
+                android:id="@+id/conjointTelephone" android:inputType="phone"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -82,7 +82,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/form_hint_telephone_bureau"
-                android:id="@+id/conjointTelephoneBureau"/>
+                android:id="@+id/conjointTelephoneBureau" android:inputType="phone"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -98,7 +98,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/form_hint_gsm"
-                android:id="@+id/conjointGsm"/>
+                android:id="@+id/conjointGsm" android:inputType="phone"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
