sante question bien

--- a/app/src/main/res/layout/sante_tabbed.xml
+++ b/app/src/main/res/layout/sante_tabbed.xml
@@ -6,6 +6,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+    <androidx.viewpager.widget.ViewPager
+            android:id="@+id/santeViewPager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"/>
 
     <Button
             android:text="@string/btn_prev"
